--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<link rel="stylesheet" href="css/style.css">
 		<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+		<meta name=”viewport” content=”width=device-width, initial-scale=1″>
 		<meta charset="UTF-8"/>
 		<title>Moja</title>
 	</head>
